tenants/howto-k8s-http2/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: howto-k8s-http2
  labels:
    mesh: appmesh
    gateway: appmesh-gateway_appmesh-gateway
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color
  namespace: howto-k8s-http2
spec:
  awsName: color.howto-k8s-http2.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color
---
# Service per VirtualNode is a no-op when using CloudMap
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-http2/color_client
          ports:
            - containerPort: 8080
---
# Service per VirtualNode is a no-op when using CloudMap
apiVersion: v1
kind: Service
metadata:
  name: red
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: red
  template:
    metadata:
      labels:
        app: color
        version: red
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-http2/color_server
          ports:
            - containerPort: 8080
---
# Service per VirtualNode is a no-op when using CloudMap
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: blue
  template:
    metadata:
      labels:
        app: color
        version: blue
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-http2/color_server
          ports:
            - containerPort: 8080
---
# Service per VirtualNode is a no-op when using CloudMap
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: green
  template:
    metadata:
      labels:
        app: color
        version: green
    spec:
      containers:
        - name: app
          image: 029718257588.dkr.ecr.eu-west-1.amazonaws.com/howto-k8s-http2/color_server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
